# weatherplatform

./: .env  main.py  pyproject.toml  requirements.txt
templates/: index.html
